--- a/Front-End Web UI Frameworks and Tools/conFusion/bower.json
+++ b/Front-End Web UI Frameworks and Tools/conFusion/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "conFusion",
-  "homepage": "",
+  "homepage": "https://github.com/nbm10/Full-Stack-Web-Development/tree/master/Front-End%20Web%20UI%20Frameworks%20and%20Tools/conFusion",
   "authors": [
-    ""
+    "nbm10"
   ],
   "description": "1.0.0",
   "main": "index.html",
